# ftl-code-agent

./: README.md  pyproject.toml
ftl_code_agent/: Gradio_UI.py  __init__.py  agents.py  cli.py  cli2.py  codegen.py  core.py  default_tools.py  ui.py
tests/: test_redbaron.py
