[project]
name = "ftl-code-agent"
version = "0.1.2"
dependencies = [
    "smolagents[litellm]==1.9.2",
    "faster_than_light",
    "gradio",
    "black",
    "pytest",
    "coverage",
    "redbaron",
]

[tool.setuptools]
packages = ["ftl_code_agent", "ftl_code_agent.prompts"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ftl-code-agent = "ftl_code_agent.cli:main"
ftl-code-agent-ui = "ftl_code_agent.ui:main"
ftl-code-agent2 = "ftl_code_agent.cli2:main"

[tool.setuptools.package-data]
"ftl_code_agent.prompts" = ["*.yaml"]

